Fixed bugs Edge and screens smaller than 300px
Changed results title and image to column when screen < 300px so that the title is readable
Edited earth.png to look softer on Edge and fixed cropping issue because it didn't look that great
Changed ul to display in center instead of space-around because it was displaying to the left when screen > 1200px

--- a/main.css
+++ b/main.css
@@ -40,6 +40,9 @@ div.title-and-image {
 }
 
 #header-image {
+  background-image: url('images/earth.png');
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 0px;
   margin-left: 15px;
   height: 45px;
@@ -65,7 +68,7 @@ section.search-container {
 }
 
 input.search-input {
-  width: 200px;
+  width: 70%;
 }
 
 input.search-submit {
@@ -125,6 +128,7 @@ img {
 
 div.image-box {
   display: flex;
+  flex-direction: column;
   align-items: center;
   margin-bottom: 15px;
 }
@@ -243,6 +247,16 @@ p.strongly-positive {
 
 }
 
+@media only screen and (min-width: 300px) {
+  div.image-box {
+    flex-direction: row;
+  }
+
+  input.search-input {
+    width: 200px;
+  }
+}
+
 @media only screen and (min-width: 575px) {
   li.list-item-content {
     width: 90%;
@@ -271,7 +285,7 @@ p.strongly-positive {
   ul.list {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
   }
   
   li.list-item-content { 
